<resources>
    <string name="app_name">College Management System</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_role">Choose your role</string>
    <string name="teacher">Faculty</string>
    <string name="choose_role_desc">Choose your role to proceed further.</string>
    <string name="sign_up">Sign up</string>
    <string name="your_password">Your password</string>
    <string name="your_email">Your email</string>
    <string name="create_your_account">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="sign_in">Sign in</string>
    <string name="classes">Classes</string>
    <string name="leaves">Leaves</string>
    <string name="profile">Profile</string>
    <string name="branch">Branch</string>
    <string name="semester">Semester</string>
    <string name="no_classes_found">Click on ( + ) icon to add a new class</string>
    <string name="no_leaves_found">Looks like you did\'t have taken any leaves &#128515;</string>
    <string name="no_leaves_found_of_std">Looks like no student have taken any leaves &#128515;</string>
    <string name="no_classes_found_for_student">It seems you don\'t have classes for this sem.</string>
    <string name="add_student">Add Student</string>
    <string name="no_students_in_class">Looks like there is no students in class</string>
    <string name="customactivityoncrash_error_activity_error_details_share">Share Crash Report</string>
    <string name="usn_last_3_digit">USN - Last 3 digit</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="bullet_point">\u25CF</string>
    <string name="attendances">Attendances</string>
    <string name="attendance">Attendance</string>
    <string name="mark_all_present">Mark All Present</string>
    <string name="all_leaves">All leaves</string>
    <string name="casual">Casual</string>
    <string name="sick">Sick</string>
    <string name="reason">Reason</string>
    <string name="hod_and_principal_note">So this leave request will be sent to <i><b>HOD and Principal</b></i>. </string>
    <string name="hod_note">So this leave request will be sent only to <i><b>HOD</b></i> . </string>
    <string name="more_than_three_days_leave_waring">\u25CF Since you are taking leave of more than 3 days.</string>
    <string name="three_days_leave_waring">\u25CF Since you are taking leave of 3 days.</string>
    <string name="two_days_leave_waring">\u25CF Since you are taking leave of 2 days.</string>
    <string name="half_day_leave_waring">\u25CF Since you are taking leave of Half day.</string>
    <string name="full_day_leave_waring">\u25CF Since you are taking leave of Full day.</string>
    <string name="helper_leave_note"><b>Note:</b>\n\u25CF <u>From Half Day to 3 days</u> - Leave will be requested to HOD.\n\u25CF <u>More than 3 days</u> - Leave will be requested to Principal.</string>
    <!--<string name="_1st_sem">1st Sem</string>
    <string name="_2nd_sem">2nd Sem</string>
    <string name="_3rd_sem">3rd Sem</string>
    <string name="_4th_sem">4th Sem</string>
    <string name="_5th_sem">5th Sem</string>-->
    <string name="_6th_sem">2020</string>
    <string name="_7th_sem">2019</string>
    <string name="_8th_sem">2018</string>
    <string name="all_batch">All batch</string>
    <string name="notification">Notification</string>
    <string name="dashboard">Dashboard</string>
    <string name="no_faculties_found">No faculties found &#129300;.</string>
</resources>