<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_theme_background_drawable">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--toolbar-->
        <RelativeLayout
            android:id="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <!--back arrow-->
            <RelativeLayout
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:background="@drawable/circular_normal_white"
                android:elevation="8dp">

                <ImageView
                    android:id="@+id/arrowBack"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="11dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_arrow_back_ios_black" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/fredoka_regular"
                android:text="Leaves"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llClassesContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rlToolbar"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/curved_top_left_right_white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/filterTV"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_gravity="start"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/fredoka_semi_bold"
                android:includeFontPadding="false"
                android:text="Filter"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                android:textColor="@color/theme_color_v1"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_filter_black"
                app:drawableTint="@color/theme_color_v1" />

            <!--<HorizontalScrollView
                android:id="@+id/filterChipScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:scrollbars="none">-->

            <!--Filter chips-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#A9F6F6F6"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/searchFilterGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    app:checkedChip="@+id/chip_all_leaves"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_all_leaves"
                        style="@style/SearchChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_leaves" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_casual"
                        style="@style/SearchChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/casual" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_sick"
                        style="@style/SearchChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sick" />

                </com.google.android.material.chip.ChipGroup>
                <!-- <com.google.android.material.chip.ChipGroup
                     android:id="@+id/filterChipGroup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp" />-->

            </LinearLayout>

            <!--classes text-->
            <TextView
                android:id="@+id/classesTV"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="start"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/fredoka_semi_bold"
                android:text="Leaves"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                android:textColor="@color/theme_color_v1"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_leave_request"
                app:drawableTint="@color/theme_color_v1" />

            <!--classes rv-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAllClasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                tools:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/recycler_all_classes_items" />

            <!--Lottie - no leaves found-->
            <RelativeLayout
                android:id="@+id/llNoLeavesFound"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:visibility="visible">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/noLeavesLottie"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_rawRes="@raw/no_leaves_found" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/noLeavesLottie"
                    android:layout_marginTop="-20dp"
                    android:fontFamily="@font/fredoka_regular"
                    android:text="@string/no_leaves_found"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/requestLeavesFloatingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:fontFamily="@font/fredoka_regular"
        android:text="Request Leave"
        android:textStyle="bold"
        app:icon="@drawable/ic_leave_request" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>